--- a/ Css/style.css
+++ b/ Css/style.css
@@ -389,27 +389,19 @@ li{
 }
 .footer{
     background-color: #EDECF6;
-    padding-top: 2%;
-    padding-bottom: 3%;
+    color: black;
     width: 100%;
     flex-shrink: 0;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-height: 100px;
-    font-size: 1.5rem;
 }
 
 .footer-title{
-    flex-basis: 0;
-    flex-grow: 1;
-}
-.footer-inner{
-    color: #717171;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    text-align: center;
+    font-size: 1rem;
+    line-height: 1.4vh;
+    font-weight: 200;
+    padding: 20px;
 }
 
 @media (max-width: 1450px){
