--- a/ Css/advise-card.css
+++ b/ Css/advise-card.css
@@ -9,8 +9,11 @@ body{
 .container{
     max-width: 1390px;
     margin: 0 auto;
+    
 }
-
+.menu-btn{
+    display: none;
+}
 .header {
     background-color: #EDECF6;
     padding-top: 2%;
@@ -19,6 +22,7 @@ body{
     z-index: 1000;
     min-height: 100%;
 }
+
 a{
     text-decoration: none;
     color: inherit;
@@ -33,7 +37,10 @@ ul{
 li{
     color: #515076;
 }
+
 .logo{
+    display: inline-block; /* Размещаем лого в том же ряду */
+    vertical-align: middle;
     padding-right: 85px;
 }
 .nav{
@@ -45,9 +52,17 @@ li{
 
 .menu{
     display: flex;
-    flex-grow: 1;
-    flex-basis: 0;
+    align-items: center;
+    flex-grow: 0;
+    flex-basis: 1;
     justify-content: flex-start;
+}
+.nav-item:last-child {
+    margin-right: 20px;
+}
+
+.form-item:first-child {
+    margin-right: 20px;
 }
 
 .nav-item{
@@ -71,17 +86,13 @@ li{
 }
 
 .basket-btn {
+    display: inline-block;
+    vertical-align: middle;
     background-color: white;
     border-radius: 30%;
-    padding: 15px;
-    width: 40%;
-    height: 40%;
-}
-.basket-btn img {
-    display: block; /* Делаем изображение блочным элементом */
-    width: 100%; /* Ширина изображения равна 100% ширины родительского контейнера */
-    height: auto; /* Автоматическая высота, чтобы сохранить пропорции */
-    margin: 0 auto; /* Выравниваем изображение по центру кнопки */
+    padding: 10px;
+    width: 40%; 
+    height: 40%; 
 }
 .advise {
     display: flex;
@@ -111,7 +122,7 @@ li{
 .advice-item {
     margin-bottom: 1%; 
     padding: 1%;
-    font-size: 1vw; 
+    font-size: 1rem; 
     color: #A5A3B9;
 }
 
@@ -141,40 +152,21 @@ li{
     margin-bottom: 60px;
 }
 
-.advises .advise-btn {
-    max-width: 50px;
-    background-color: #515076;
-    color: white;
-    font-size: 14px;
-    font-weight: bold;
-    text-decoration: none;
-    padding: 10px 20px;
-    display: inline-block;
-}
-
 .footer{
     background-color: #EDECF6;
-    padding-top: 2%;
-    padding-bottom: 3%;
+    color: black;
     width: 100%;
     flex-shrink: 0;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-height: 100px;
-    font-size: 1.5rem;
 }
 
 .footer-title{
-    flex-basis: 0;
-    flex-grow: 1;
-}
-.footer-inner{
-    color: #717171;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    text-align: center;
+    font-size: 2rem;
+    line-height: 1.4vh;
+    font-weight: 200;
+    padding: 20px;
 }
 
 @media (max-width: 1450px){
@@ -187,18 +179,12 @@ li{
         font-size: 1.6rem;
     }
 }
-@media (max-width: 1350px){
-    .menu-img{
-        margin-left: 20px;
-    }
-    .nav{
-        font-size: 1.6rem;
-    }
-}
+
 @media (max-width: 1150px){
     .advises .advise-title {
         font-size: 2rem;
     }
+    
     .advises .advise-tt {
         font-size: 2.5rem;
     }
@@ -209,37 +195,97 @@ li{
     .advises .advise-btn {
         font-size: 1.5rem;
     }
-    .menu-img{
-        margin-left: 20px;
-    }
-    .nav{
-        font-size: 1.4rem;
-    }
     .footer{
         font-size: 2rem;
     }
 }
 @media (max-width: 910px){
-    .nav{
-        font-size: 1rem;
+    .menu-btn{
+        display: inline-block;
+        width: 50px;
+        height: 50px;
+        background-color: transparent;
+        order: 1;
+        border: none;
+        cursor: pointer;
+        position: relative;
+        z-index: 50;
+        margin-right: 20px;
+        z-index: 1000;
     }
-    .advises .advise-title {
-        font-size: 2.5rem;
+    .logo{
+        position: relative;
+        z-index: 1001;
+        margin-left: 20px;
+    }
+    .btn-line{
+        position: absolute;
+        left: 0;
+        width: 100%;
+        background-color:#515076;
+        height: 3px;
+        transition: .3s ease;
+    }
+    .btn-line:nth-child(1){
+        top: 0;
+    }
+    .btn-line:nth-child(2){
+        top: 20px;
+    }
+    .btn-line:nth-child(3){
+        top: 20px;
+    }
+    .btn-line:nth-child(4){
+        top: 40px;
+    }
+    .menu-open .btn-line:nth-child(1){
+        transform: scale(0);
+    }
+    .menu-open .btn-line:nth-child(2){
+        transform: rotate(45deg);
+    }
+    .menu-open .btn-line:nth-child(3){
+        transform: rotate(-45deg);
+    }
+    .menu-open .btn-line:nth-child(4){
+        transform: scale(0);
+    }
+    .iphone-news{
+        display: none;
+    }
+    .menu {
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        top: 0;
+        background-color: #EDECF6;
+        display: flex;
+        justify-content: center; /* Выравнивание по горизонтали */
+        align-items: center; /* Выравнивание по вертикали */
+        flex-direction: column;
+        transform: translateY(-100%);
+        transition: .3s ease;
+        z-index: 1000;
+        padding: 10px;
     }
     
-    .advises .advise-tt {
-        font-size: 2.8rem;
+    .menu-open .menu {
+        transform: translateY(0);
+        pointer-events: auto;
     }
-    
-    .advises .advise-opis {
-        font-size: 2.5rem;
+    .nav-item,
+    .form-item {
+        margin: 10px 0;
+        display: block;
+        padding: 10px 20px;
+        text-align: center;
+        text-decoration: none;
+        font-size: 3.5rem;
     }
-}
-@media (max-width: 690px){
     .basket-btn {
-        width: 30px; /* Примерная ширина кнопки при сжатии экрана */
-        height: 30px; /* Примерная высота кнопки при сжатии экрана */
-        padding: 10px; /* Примерный внутренний отступ кнопки при сжатии экрана */
+        width: 80%; 
+        height: 80%; 
     }
     .advises .advise-title {
         font-size: 2rem;
@@ -252,10 +298,5 @@ li{
     .advises .advise-opis {
         font-size: 2rem;
     }
-    .nav{
-        font-size: 1.8rem;
-    }
-    .footer{
-        font-size: 2.5rem;
-    }
+
 }
