--- a/ Css/catalog-card.css
+++ b/ Css/catalog-card.css
@@ -10,62 +10,16 @@ body{
     max-width: 1390px;
     margin: 0 auto;
 }
-
-header{
+.menu-btn{
+    display: none;
+}
+.header {
     background-color: #EDECF6;
-    padding-top: 12px;
-    padding-bottom: 21px;
-    top: 0;
+    padding-top: 2%;
+    padding-bottom: 3%;
     width: 100%;
-    z-index: 1000; 
-}
-
-.logo{
-    padding-right: 85px;
-}
-.nav{
-    display: flex;
-    justify-content: left;
-    align-items: center;
-}
-
-.menu{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.nav-item{
-    padding-right: 40px;
-}
-.nav-item:hover {
-    color: #aaa8f0; 
-    transition: color 0.5s;
-}
-.menu-form {
-    display: flex;
-    align-items: center;
-    margin-left: 400px;
-}
-.form-item:hover {
-    color: #aaa8f0; 
-    transition: color 0.5s;
-}
-.form-item{
-    padding-right: 20px;
-    font-weight: 700;
-}
-
-.menu-item:last-child .menu-img {
-    padding-right: 0;
-}
-.form-item:last-child .menu-img {
-    padding-right: 0;
-}
-.basket-btn{
-  background-color: white;
-  border-radius: 30%;
-  padding: 15px;
+    z-index: 1000;
+    min-height: 100%;
 }
 
 a{
@@ -83,12 +37,69 @@ li{
     color: #515076;
 }
 
-main{
-    flex-grow: 1;
+.logo{
+    display: inline-block; /* Размещаем лого в том же ряду */
+    vertical-align: middle;
+    padding-right: 85px;
 }
-.container-title{
-    width: 100%;
+.nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1rem;
+}
 
+.menu{
+    display: flex;
+    align-items: center;
+    flex-grow: 0;
+    flex-basis: 1;
+    justify-content: flex-start;
+}
+.nav-item:last-child {
+    margin-right: 20px;
+}
+
+.form-item:first-child {
+    margin-right: 20px;
+}
+
+.nav-item{
+    padding-right: 40px;
+}
+.nav-item:hover {
+    color: #aaa8f0; 
+    transition: color 0.5s;
+}
+.menu-form {
+    display: flex;
+    align-items: center;
+}
+.form-item{
+    padding-right: 20px;
+    font-weight: 700;
+}
+.form-item:hover {
+    color: #aaa8f0; 
+    transition: color 0.5s;
+}
+
+.basket-btn {
+    display: inline-block;
+    vertical-align: middle;
+    background-color: white;
+    border-radius: 30%;
+    padding: 10px;
+    width: 40%; 
+    height: 40%; 
+}
+
+/* Иконка внутри кнопки */
+.basket-btn img {
+    display: block;
+    width: 100%;
+    height: auto;
+    margin: 0 auto;
 }
 
 .products {
@@ -307,7 +318,6 @@ main{
     max-width: 100%;
     height: auto;
 }
-/*
 .form-container{
     filter: blur(6px); 
 }
@@ -324,7 +334,6 @@ main{
     margin-top: 20px; 
     position: relative; 
     top: 350px;
-    right: 30px;
     z-index: 1; 
 }
 
@@ -341,7 +350,7 @@ main{
 
 .buttons button:hover {
     background-color: #757AA5;
-}*/
+}
 
 .footer{
     background-color: #EDECF6;
@@ -354,8 +363,139 @@ main{
 
 .footer-title{
     text-align: center;
-    font-size: 14px;
-    line-height: 14px;
+    font-size: 2rem;
+    line-height: 1.4vh;
     font-weight: 200;
     padding: 20px;
+}
+@media (max-width: 1450px){
+    .nav{
+        font-size: 1.5rem;
+    }
+}
+
+@media (max-width: 1150px){
+    .nav{
+        font-size: 1.4rem;
+    }
+    .footer{
+        font-size: 2rem;
+    }
+}
+@media (max-width: 910px){
+    .menu-btn{
+        display: inline-block;
+        width: 50px;
+        height: 50px;
+        background-color: transparent;
+        order: 1;
+        border: none;
+        cursor: pointer;
+        position: relative;
+        z-index: 50;
+        margin-right: 20px;
+        z-index: 1000;
+    }
+    .logo{
+        position: relative;
+        z-index: 1001;
+        margin-left: 20px;
+    }
+    .btn-line{
+        position: absolute;
+        left: 0;
+        width: 100%;
+        background-color:#515076;
+        height: 3px;
+        transition: .3s ease;
+    }
+    .btn-line:nth-child(1){
+        top: 0;
+    }
+    .btn-line:nth-child(2){
+        top: 20px;
+    }
+    .btn-line:nth-child(3){
+        top: 20px;
+    }
+    .btn-line:nth-child(4){
+        top: 40px;
+    }
+    .menu-open .btn-line:nth-child(1){
+        transform: scale(0);
+    }
+    .menu-open .btn-line:nth-child(2){
+        transform: rotate(45deg);
+    }
+    .menu-open .btn-line:nth-child(3){
+        transform: rotate(-45deg);
+    }
+    .menu-open .btn-line:nth-child(4){
+        transform: scale(0);
+    }
+    .iphone-news{
+        display: none;
+    }
+    .menu {
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        top: 0;
+        background-color: #EDECF6;
+        display: flex;
+        justify-content: center; /* Выравнивание по горизонтали */
+        align-items: center; /* Выравнивание по вертикали */
+        flex-direction: column;
+        transform: translateY(-100%);
+        transition: .3s ease;
+        z-index: 1000;
+        padding: 10px;
+    }
+    
+    .menu-open .menu {
+        transform: translateY(0);
+        pointer-events: auto;
+    }
+    .nav-item,
+    .form-item {
+        margin: 10px 0;
+        display: block;
+        padding: 10px 20px;
+        text-align: center;
+        text-decoration: none;
+        font-size: 3.5rem;
+    }
+    .basket-btn {
+        width: 80%; 
+        height: 80%; 
+    }
+    .product {
+        text-align: center;
+        width: 90%; /* Задаем ширину карточки */
+        margin: 20px 0; /* Уменьшаем отступы между карточками */
+        padding: 10px;
+        margin-left: auto;
+        margin-right: auto;
+    }    
+    .product-image {
+        width: 100%; /* Ширина изображения товара */
+        height: 200px;
+    }
+    .product-title {
+        margin-top: 10px;
+        margin-bottom: 5px; /* Отступ снизу от названия до цены */
+        font-size: 3rem;
+        line-height: 4vh;
+        font-weight: 100;
+    }
+    
+    .product-price {
+        font-weight: bold;
+        display: inline-block; /* Размещаем цену и иконку корзины в одном ряду */
+        vertical-align: middle; /* Выравниваем по вертикали */
+        font-size: 3rem;
+        line-height: 2.8vh;
+        font-weight: 200;
+    }
 }
